# csln

./: .cursorrules  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md
.agent/: PROTOCOL.md
.agent/context/: guidelines.md  product.md  tech_stack.md
.agent/personas/: architect.md  engineer.md  product_manager.md  template.md
.agent/workflows/: pre_task_check.md  self_update.md  tdd.md
.chglog/: CHANGELOG.tpl.md  config.yml
.github/workflows/: quickstart.yml
bibliography/: Cargo.toml  README.md
bibliography/src/: lib.rs  reference.rs
citation/: Cargo.toml
citation/src/: lib.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs  makeschemas.rs
conductor/: tracks.md
conductor/tracks/yaml_tests_20260125/: index.md  metadata.json  plan.md  spec.md
core/: Cargo.toml
core/src/: lib.rs
csln/: Cargo.toml
csln/src/: lib.rs
csln/src/bibliography/: README.md  mod.rs  reference.rs
csln/src/citation/: mod.rs
csln/src/style/: README.md  convert.rs  locale.rs  mod.rs  options.rs  template.rs
docs/: TEST_PLAN.md
examples/: bib.yaml  bibliography.yaml  csl-templates.yaml  locale-en-US.yaml  style.csl.yaml  style.yaml
processor/: Cargo.toml  README.md
processor/benches/: proc_bench.rs
processor/examples/: bibliography.yaml  chicago-ad-experiment.yaml  chicago-author-date.csl.yaml  chicago.bib.yaml  citation.yaml  ex1.bib.yaml  locale-en.yaml  style.csl.yaml
processor/locales/: locale-en.yaml
processor/src/: error.rs  lib.rs  processor.rs  render.rs  types.rs  values.rs
processor/tests/: processor_test.rs
src/: cli.rs  make_schemas.rs  processor.rs
src/bibliography/: mod.rs  reference.rs
src/style/: mod.rs  options.rs  template.rs
style/: Cargo.toml  README.md
style/src/: lib.rs  locale.rs  options.rs  template.rs
types/: Cargo.toml
types/src/: lib.rs
