[package]
name = "csln-bibliography"
authors = ["Bruce D'Arcus <bdarcus@gmail.com>"]
license = "MPL-2.0"
version = "0.1.0"
edition = "2021"

[lib]
name = "csln_bibliography" 
test = true
doctest = true
bench = true
doc = true
edition = "2021" 
crate-type = ["lib"] 

[dependencies]
schemars = "0.8.12"
serde = { version = "1.0.162", features = ["derive"] }
serde_derive = "1.0.162"
serde_json = "1.0.96"
serde_yaml = "0.9.21"
edtf = { version = "0.2.0", features = ["chrono"] }
chrono = { version = "0.4", features = ["unstable-locales"] }
style = { path = "../style", package = "csln-style" }
rayon = "1.7.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "ref_benches"
harness = false
