[package]
name = "csln-bibliography"
authors = ["Bruce D'Arcus <bdarcus@gmail.com>"]
license = "MPL-2.0"
version = "0.1.0"
edition = "2021"

[lib]
name = "csln_bibliography" 
test = true
doctest = true
bench = true
doc = true
edition = "2021" 
crate-type = ["lib"] 

[dependencies]
schemars = { version = "0.8", features = ["url"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
url = { version = "2", features = ["serde"] }
edtf = { version = "0.2", features = ["chrono"] }
chrono = { version = "0.4", features = ["unstable-locales"] }
style = { path = "../style", package = "csln-style" }

