[package]
name = "csl-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edtf = "0.2.0"
icu = { version = "1.2.0", features = ["icu_datetime_experimental"] }
icu_datetime = "1.2.1"
icu_testdata = { version = "1.2.0", features = ["icu_datetime_experimental"]  }
citation = { path = "../citation/", package = "csln-citation"}
bibliography = { path = "../bibliography", package = "csln-bibliography" }
style = { path = "../style", package = "csln-style" }
unic-langid = { version = "0.9.1", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
schemars = { version = "0.8.12", features = ["url"] }
url = "2.4.0"
unic-locale-impl = "0.9.1"
