[package]
name = "csln-processor"
authors = ["Bruce D'Arcus <bdarcus@gmail.com>"]
license = "MPL-2.0"
version = "0.1.0"
edition = "2021"

[lib]
name = "csln_processor" 
test = true
doctest = true
bench = true
doc = true

crate-type = ["lib"]   # The crate types to generate.

[dependencies]
schemars = "0.8.12"
serde = "1.0.162"
serde_derive = "1.0.162"
serde_json = "1.0.96"
serde_yaml = "0.9.21"
edtf = { version = "0.2.0", features = ["chrono"] }
csln = { path = "../csln", package = "csln" }
itertools = "0.12"
rayon = "1.7.0"
icu = "1.2.0"
icu_testdata = "1.2.0"
icu_datetime = "1.2.1"
chrono = "0.4.26"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
anyhow = "1.0.79"

[[bench]]
name = "proc_bench"
harness = false

[lints]
workspace = true
